# ClientApp/openapi.json
@@ -1,114 +1,280 @@
 {
-    "x-generator": "NSwag v13.7.4.0 (NJsonSchema v10.1.26.0 (Newtonsoft.Json v12.0.0.0))",
-    "swagger": "2.0",
-    "info": {
-      "title": "Pizza Manager API",
-      "version": "1.0.0"
-    },
-    "host": "127.0.0.1:5000",
-    "schemes": [
-      "http"
-    ],
-    "produces": [
-      "text/plain",
-      "application/json",
-      "text/json"
-    ],
-    "paths": {
-      "/Pizza": {
-        "get": {
-          "tags": [
-            "Pizza"
-          ],
-          "operationId": "Pizza_GetAllPizzas",
-          "responses": {
-            "200": {
-              "x-nullable": false,
-              "description": "",
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/definitions/Pizza"
-                }
+  "x-generator": "NSwag v13.7.4.0 (NJsonSchema v10.1.26.0 (Newtonsoft.Json v12.0.0.0))",
+  "swagger": "2.0",
+  "info": {
+    "title": "Pizza Manager API",
+    "version": "1.0.0"
+  },
+  "host": "127.0.0.1:5000",
+  "schemes": [
+    "http"
+  ],
+  "produces": [
+    "text/plain",
+    "application/json",
+    "text/json"
+  ],
+  "paths": {
+    "/Pizza": {
+      "get": {
+        "tags": [
+          "Pizza"
+        ],
+        "operationId": "Pizza_GetAllPizzas",
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/PizzaDto"
               }
             }
           }
-        },
-        "post": {
-          "tags": [
-            "Pizza"
-          ],
-          "operationId": "Pizza_AddPizza",
-          "consumes": [
-            "application/json",
-            "text/json",
-            "application/*+json"
-          ],
-          "parameters": [
-            {
-              "name": "new_pizza",
-              "in": "body",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/Pizza"
-              },
-              "x-nullable": false
+        }
+      },
+      "put": {
+        "tags": [
+          "Pizza"
+        ],
+        "operationId": "Pizza_UpdatePizza",
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "name": "updated_pizza",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/PizzaDto"
+            },
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/PizzaDto"
             }
-          ],
-          "responses": {
-            "200": {
-              "x-nullable": false,
-              "description": "",
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/definitions/PizzaDto"
-                }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Pizza"
+        ],
+        "operationId": "Pizza_AddPizza",
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "name": "new_pizza_dto",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/NewPizzaDto"
+            },
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/PizzaDto"
+            }
+          }
+        }
+      }
+    },
+    "/Pizza/one/{pizza_id}": {
+      "get": {
+        "tags": [
+          "Pizza"
+        ],
+        "operationId": "Pizza_GetOnePizza",
+        "parameters": [
+          {
+            "type": "integer",
+            "name": "pizza_id",
+            "in": "path",
+            "required": true,
+            "format": "int32",
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/PizzaDto"
+            }
+          }
+        }
+      }
+    },
+    "/Pizza/ingredients": {
+      "get": {
+        "tags": [
+          "Pizza"
+        ],
+        "operationId": "Pizza_GetIngredients",
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/IngredientDto"
               }
             }
           }
         }
       }
     },
-    "definitions": {
-      "Pizza": {
-        "type": "object",
-        "required": [
-          "pizza_id",
-          "is_calzone"
+    "/Pizza/topping/add/{pizza_id}/{ingredient_id}": {
+      "post": {
+        "tags": [
+          "Pizza"
         ],
-        "properties": {
-          "pizza_id": {
+        "operationId": "Pizza_AddToppingToPizza",
+        "parameters": [
+          {
             "type": "integer",
-            "format": "int32"
+            "name": "pizza_id",
+            "in": "path",
+            "required": true,
+            "format": "int32",
+            "x-nullable": false
           },
-          "name": {
-            "type": "string"
-          },
-          "pizza_dough_type": {
-            "type": "string"
-          },
-          "is_calzone": {
-            "type": "boolean"
+          {
+            "type": "integer",
+            "name": "ingredient_id",
+            "in": "path",
+            "required": true,
+            "format": "int32",
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/PizzaDto"
+            }
           }
         }
-      },
-      "PizzaDto": {
-        "type": "object",
-        "required": [
-          "is_calzone"
+      }
+    },
+    "/Pizza/topping/delete/{pizza_id}/{ingredient_id}": {
+      "delete": {
+        "tags": [
+          "Pizza"
         ],
-        "properties": {
-          "name": {
-            "type": "string"
+        "operationId": "Pizza_RemoveToppingFromPizza",
+        "parameters": [
+          {
+            "type": "integer",
+            "name": "pizza_id",
+            "in": "path",
+            "required": true,
+            "format": "int32",
+            "x-nullable": false
           },
-          "pizza_dough_type": {
-            "type": "string"
-          },
-          "is_calzone": {
-            "type": "boolean"
+          {
+            "type": "integer",
+            "name": "ingredient_id",
+            "in": "path",
+            "required": true,
+            "format": "int32",
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/PizzaDto"
+            }
           }
         }
       }
     }
+  },
+  "definitions": {
+    "PizzaDto": {
+      "type": "object",
+      "required": [
+        "pizza_id",
+        "is_calzone"
+      ],
+      "properties": {
+        "pizza_id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        },
+        "pizza_dough_type": {
+          "type": "string"
+        },
+        "is_calzone": {
+          "type": "boolean"
+        },
+        "ingredients": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "NewPizzaDto": {
+      "type": "object",
+      "required": [
+        "is_calzone"
+      ],
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "pizza_dough_type": {
+          "type": "string"
+        },
+        "is_calzone": {
+          "type": "boolean"
+        }
+      }
+    },
+    "IngredientDto": {
+      "type": "object",
+      "required": [
+        "ingredient_id"
+      ],
+      "properties": {
+        "ingredient_id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "ingredient_name": {
+          "type": "string"
+        }
+      }
+    }
   }
+}
