# ClientApp/src/app/api/model/models.ts
@@ -1,2 +1,3 @@
-export * from './pizza';
+export * from './ingredientDto';
+export * from './newPizzaDto';
 export * from './pizzaDto';
